HFP-3340 Fix dropdown column break issue
The issue was that the dropdown would be broken accross columns in uncategorized

Also prevent the dropdown from being out of the iframe if the content is too small

--- a/src/components/commons/DropdownSelect.scss
+++ b/src/components/commons/DropdownSelect.scss
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0.5em;
   box-sizing: border-box;
-  top: 100%;
+  top: 50%;
   right: 0;
   max-height: 20em;
   width: 100%;
@@ -20,6 +20,7 @@
   -webkit-column-break-inside: avoid;
   page-break-inside: avoid;
   break-inside: avoid;
+  backface-visibility: hidden;
 
   .label {
     padding: 0em 0.5em;
