--- a/src/components/uncategorized/Uncategorized.scss
+++ b/src/components/uncategorized/Uncategorized.scss
@@ -18,6 +18,7 @@
     padding: 0em 0.25em;
     margin: 0;
     list-style-type: none;
+    position: relative;
 
     -webkit-column-count: 2;
     -moz-column-count: 2;
